@@ -93,6 +93,7 @@ MKDEPS_CXX	= @CXX@
 MKINSTALLDIRS	= $(scriptdir)/mkinstalldirs
 MKPATH		= $(JUGGLERROOT_ABS)/Doozer++/mk
 MTREE_CMD	= @MTREE_CMD@
+PROFLIB_EXT	= _p
 VPRROOT_ABS	= @VPRROOT_ABS@
 JUGGLERROOT_ABS	= @JUGGLERROOT_ABS@
 
